fix: mobile nav banner not visible due top-banner-bg

--- a/stylus/website/index.styl
+++ b/stylus/website/index.styl
@@ -1848,6 +1848,14 @@ footer {
   width: 100%;
   height: 48px;
   z-index: 100;
+
+  &.closed {
+    visibility: hidden;
+    height: 0;
+    opacity: 0;
+    padding: 0;
+    transition: all 0.1s linear;
+  }
 }
 
 .top-banner {
